--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
       <h2>Monochrome Plum Harvest</h2>
       <button class="fullscreen-btn" onclick="toggleFullscreen()">Fullscreen</button>
     </div>
-    <iframe src="monochromeplumharvest.html"></iframe>
+    <iframe src="games/monochromeplumharvest.html"></iframe>
   </div>
 
   <script>
